Add headings for theoretical background

--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,50 @@
-*.acn
-*.acr
-*.alg
+# LaTeX intermediate and output files
 *.aux
-*.bak
 *.bbl
-*.bcf
 *.blg
 *.brf
-*.bst
-*.dvi
-*.fdb_latexmk
 *.fls
-*.glg
+*.fdb_latexmk
 *.glo
 *.gls
+*.glg
 *.idx
 *.ilg
 *.ind
 *.ist
 *.lof
 *.log
-*.lol
 *.lot
-*.maf
-*.mtc
-*.mtc1
-*.nav
-*.nlo
-*.nls
 *.out
-*.pdf
-*.pyg
-*.run.xml
-*.snm
-*.synctex.gz
-*.tex.backup
-*.tex~
-*.thm
 *.toc
-*.vrb
+*.acn
+*.acr
+*.alg
+*.glsdefs
 *.xdy
-*.xml
-*blx.bib
-.bak 
-.mtc
-build/      
+*.synctex.gz
+*.nav
+*.snm
+*.vrb
+*.xdv
+*.run.xml
+*.bcf
+*.pdfsync
+*.thm
+*.dvi
+*.ps
+*.eps
+*.pdf
+*.xmpdata
 *.xmpi
-thesis.xmpdata
+
+# MacOS Finder files
+.DS_Store
+
+# VSCode/Editor folders
+.vscode/
+*.swp
+*~
+
+# Other
+pdfa.xmpi
